# tunnelcraft

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package.json  tsconfig.base.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/public/: manifest.webmanifest
client/src/: App.jsx  App.tsx  main.tsx  router.tsx  styles.css  vitest.d.ts
client/src/components/: account.jsx  account.tsx  auth.jsx  auth.tsx  brand.tsx  donate.tsx  exam.tsx  exercises.jsx  exercises.tsx  extra.jsx  extra.tsx  glossary.tsx  guidance.tsx  header.tsx  labs.tsx  review.jsx  review.tsx  search.jsx  search.tsx  verify.jsx  verify.tsx
client/src/curriculum/: core.js  core.ts  exam-bank.ts  glossary.ts  net-a.js  net-a.ts  net-b.js  net-b.ts  net-c.js  net-c.ts  net-cloud.ts  net-d.js  net-d.ts  net-dhcp.ts  net-v6t.ts  net-wifi.js  net-wifi.ts  platform-a.js  platform-a.ts  platform-b.js  platform-b.ts  rust-extra.js  rust-extra.ts  tracks.js  (+8 more)
labs/capstone/: Cargo.toml  README.md
labs/capstone/src/: frame.rs  lib.rs  peer.rs  proto.rs  relay.rs  routes.rs  upnp.rs
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/src/: db.js  db.ts  devices.js  devices.ts  express.d.ts  index.js  index.ts  logger.js  logger.ts  mail.js  mail.ts  oauth.js  oauth.ts  progress.ts  sessions.js  sessions.ts
server/test/: api.test.js  api.test.ts
(+40 files in other folders)
